# digichecks-shacl-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init_database.py  pyproject.toml
alembic/: README  env.py
alembic/versions/: fad3cba3e21f_initial.py
api/: main.py  models.py
api/crud/: application.py  check.py  companies.py  connector.py
api/dependencies/: __init__.py  config.py  database.py  security.py
api/routers/: application_router.py  auth_router.py  check_router.py  company_router.py  connector_router.py  convertor_router.py
api/schemas/: __init__.py
api/schemas/app/: check.py  connector.py
api/schemas/core/: application.py  company.py  token.py
api/utils/: api.py  check_helpers.py  convertors.py  oauth_form.py  supplyPointQuery.sparql
